Add tune + dashboard SARIMAX
Backup and refactor code. Update Readme.

--- a/yield_prophet-dashboard.ipynb
+++ b/yield_prophet-dashboard.ipynb
@@ -95,8 +95,8 @@
     "        'price_file' : 'OAE-process/OAE-ราคาข้าวเปลือกเจ้า.xlsx',\n",
     "        'harvest' : rice_offseason_harvest_season,\n",
     "        'seasonality_prior_scale': 0.1,\n",
-    "        'fourier_order': 7,\n",
-    "        'prior_scale': 5\n",
+    "        'fourier_order': 5,\n",
+    "        'prior_scale': 0.1\n",
     "    },\n",
     "    \n",
     "    'corn': {\n",
@@ -128,15 +128,15 @@
     "        'prior_scale': 0.1\n",
     "    },\n",
     "    \n",
-    "#     'rubber': {\n",
-    "#         'yield_file' : 'OAE-process/OAE-ผลผลิตยางพารา.xlsx',\n",
-    "#         'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่ยางพารา.xlsx',\n",
-    "#         'price_file' : ['OAE-process/OAE-ราคาน้ำยางสดคละ.xlsx', 'OAE-process/OAE-ราคายางก้อน.xlsx', 'OAE-process/OAE-ราคายางแผ่นดิบชั้น3.xlsx'],\n",
-    "#         'harvest' : rubber_harvest_season,\n",
-    "#         'seasonality_prior_scale': ,\n",
-    "#         'fourier_order': ,\n",
-    "#         'prior_scale': \n",
-    "#     }\n",
+    "    'rubber': {\n",
+    "        'yield_file' : 'OAE-process/OAE-ผลผลิตยางพารา.xlsx',\n",
+    "        'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่ยางพารา.xlsx',\n",
+    "        'price_file' : ['OAE-process/OAE-ราคาน้ำยางสดคละ.xlsx', 'OAE-process/OAE-ราคายางก้อน.xlsx', 'OAE-process/OAE-ราคายางแผ่นดิบชั้น3.xlsx'],\n",
+    "        'harvest' : rubber_harvest_season,\n",
+    "        'seasonality_prior_scale': 1,\n",
+    "        'fourier_order': 3,\n",
+    "        'prior_scale': 5\n",
+    "    }\n",
     "}"
    ]
   },
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptype = 'rice_off-season'"
+    "ptype = 'rice_off-season'#'rice_off-season'"
    ]
   },
   {
@@ -189,117 +189,7 @@
     "precipitation_file = 'OAE-process/OAE-ปริมาณน้ำฝน-ฝนตก.xlsx'\n",
     "df_precip = pd.read_excel(precipitation_file)\n",
     "\n",
-    "df_price = read_month_data(price_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ds</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2020-07-01</th>\n",
-       "      <td>8941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01</th>\n",
-       "      <td>9052</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-01</th>\n",
-       "      <td>9319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-04-01</th>\n",
-       "      <td>9453</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-01</th>\n",
-       "      <td>8655</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-01</th>\n",
-       "      <td>7674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-04-01</th>\n",
-       "      <td>7607</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-03-01</th>\n",
-       "      <td>7723</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-02-01</th>\n",
-       "      <td>7873</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-01</th>\n",
-       "      <td>7895</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>67 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               y\n",
-       "ds              \n",
-       "2020-07-01  8941\n",
-       "2020-06-01  9052\n",
-       "2020-05-01  9319\n",
-       "2020-04-01  9453\n",
-       "2020-03-01  8655\n",
-       "...          ...\n",
-       "2015-05-01  7674\n",
-       "2015-04-01  7607\n",
-       "2015-03-01  7723\n",
-       "2015-02-01  7873\n",
-       "2015-01-01  7895\n",
-       "\n",
-       "[67 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_price"
+    "# df_price = read_month_data(price_file)"
    ]
   },
   {
@@ -318,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfe9c39cc37c44d1b468e96d2f07fdb9",
+       "model_id": "ed74e2d5c6cb48b2a47f6a6187d63709",
        "version_major": 2,
        "version_minor": 0
       },
@@ -389,8 +279,6 @@
     "    future = model.make_future_dataframe(periods=24, freq=\"MS\")\n",
     "    future = add_features(future)\n",
     "    \n",
-    "    print(future)\n",
-    "    \n",
     "    if is_harvest_season:\n",
     "        future = future.apply(is_harvest_season, axis=1)\n",
     "\n",
@@ -401,12 +289,13 @@
     "    # Sanity check that we are evaluating the forecase at the same date\n",
     "    assert(np.all(forecast[12:24]['ds'].to_numpy() == df_test['ds'].to_numpy()))\n",
     "    # Calculate root mean squared error.\n",
-    "    print('RMSE: %f' % np.sqrt(np.mean((forecast[12:24]['yhat'].to_numpy() - df_test['y'].to_numpy())**2)) )\n",
-    "    print('MAE: %f' % np.mean(np.abs(forecast[12:24]['yhat'].to_numpy() - df_test['y'].to_numpy())) )\n",
+    "    print(f'\\nPredict Yield from {df_test[\"ds\"].min().strftime(\"%b %Y\")} to {df_test[\"ds\"].max().strftime(\"%b %Y\")}')\n",
+    "    print('RMSE: %.2f' % np.sqrt(np.mean((forecast[12:24]['yhat'].to_numpy() - df_test['y'].to_numpy())**2)) )\n",
+    "    print('MAE: %.2f' % np.mean(np.abs(forecast[12:24]['yhat'].to_numpy() - df_test['y'].to_numpy())) )\n",
     "    \n",
     "    total_error = abs(1 - (np.sum(forecast[12:24]['yhat'].to_numpy()) / np.sum(df_test['y'].to_numpy()))) * 100\n",
-    "    print('Total Error: %.3f' % total_error)\n",
-    "    print('Forecast:', np.sum(forecast[12:24]['yhat'].to_numpy()))\n",
+    "    print(f\"Total Error: {total_error:.3f} %\")\n",
+    "    print(f\"Forecast: {np.sum(forecast[12:24]['yhat'].to_numpy()):.2f}\")\n",
     "    print('Ground Truth:', np.sum(df_test['y'].to_numpy()))\n",
     "    \n",
     "    py.iplot([\n",
