Update code for new version of data

--- a/yield_prophet-dashboard.ipynb
+++ b/yield_prophet-dashboard.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -53,15 +53,20 @@
     "\n",
     "from fbprophet.plot import plot_plotly, plot_components_plotly\n",
     "\n",
-    "\n",
-    "from utils.preproc import read_yield, get_yeild_area, read_annually_data, read_month_data, read_month_data_area, add_regressor\n",
-    "from utils.preproc import rice_inseason_harvest_season, rice_offseason_harvest_season, corn_harvest_season, cassava_harvest_season, rubber_harvest_season\n",
+    "from utils.preprocess import read_yield, get_yeild_area, read_annually_data, read_month_data, read_month_data_area, add_regressor\n",
     "\n",
     "py.init_notebook_mode(connected=True)\n",
     "\n",
     "from __future__ import print_function\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n",
+    "\n",
+    "\n",
+    "import datetime\n",
+    "\n",
+    "from config import params\n",
+    "\n",
+    "eps = 1e-16"
    ]
   },
   {
@@ -73,71 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rice_in-season', 'rubber', 'rice_off-season', 'palm', 'coffee', 'corn', 'cassava', 'longan', 'durian', 'pineapple', 'rambutan', 'mangosteen', 'coconut']\n"
+     ]
+    }
+   ],
    "source": [
-    "# rice in-season\n",
-    "params = {\n",
-    "    'rice_in-season': {\n",
-    "        'yield_file' : 'OAE-process/OAE-ผลผลิตข้าวนาปี.xlsx',\n",
-    "        'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่ข้าวนาปี.xlsx',\n",
-    "        'price_file' : 'OAE-process/OAE-ราคาข้าวเปลือกเจ้า.xlsx',\n",
-    "        'harvest' : rice_inseason_harvest_season,\n",
-    "        'seasonality_prior_scale': 0.1,\n",
-    "        'fourier_order': 7,\n",
-    "        'prior_scale': 0.1\n",
-    "    },\n",
-    "    \n",
-    "    'rice_off-season': {\n",
-    "        'yield_file' : 'OAE-process/OAE-ผลผลิตข้าวนาปรัง.xlsx',\n",
-    "        'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่ข้าวนาปรัง.xlsx',\n",
-    "        'price_file' : 'OAE-process/OAE-ราคาข้าวเปลือกเจ้า.xlsx',\n",
-    "        'harvest' : rice_offseason_harvest_season,\n",
-    "        'seasonality_prior_scale': 0.1,\n",
-    "        'fourier_order': 5,\n",
-    "        'prior_scale': 0.1\n",
-    "    },\n",
-    "    \n",
-    "    'corn': {\n",
-    "        'yield_file' : 'OAE-process/OAE-ผลผลิตข้าวโพดทั้งหมด.xlsx',\n",
-    "        'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่ข้าวโพดเลี้ยงสัตว์.xlsx',\n",
-    "        'price_file' : 'OAE-process/OAE-ราคาข้าวโพดเลี้ยงสัตว์.xlsx',\n",
-    "        'harvest' : corn_harvest_season,\n",
-    "        'seasonality_prior_scale': 0.1,\n",
-    "        'fourier_order': 3,\n",
-    "        'prior_scale': 0.1\n",
-    "    },\n",
-    "    \n",
-    "    'palm': {\n",
-    "        'yield_file' : 'OAE-process/OAE-ผลผลิตปาล์มน้ำมัน.xlsx',\n",
-    "        'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่ปาล์มน้ำมัน.xlsx',\n",
-    "        'price_file' : 'OAE-process/OAE-ราคาปาล์มน้ำมัน.xlsx',\n",
-    "        'harvest' : None,\n",
-    "        'seasonality_prior_scale': 10,\n",
-    "        'prior_scale': 0.1\n",
-    "    },\n",
-    "    \n",
-    "    'cassava': {\n",
-    "        'yield_file' : 'OAE-process/OAE-ผลผลิตมันสำปะหลัง.xlsx',\n",
-    "        'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่มันสำปะหลัง.xlsx',\n",
-    "        'price_file' : 'OAE-process/OAE-ราคามันสำปะหลังสดคละ.xlsx',\n",
-    "        'harvest' : cassava_harvest_season,\n",
-    "        'seasonality_prior_scale': 0.1,\n",
-    "        'fourier_order': 3,\n",
-    "        'prior_scale': 0.1\n",
-    "    },\n",
-    "    \n",
-    "    'rubber': {\n",
-    "        'yield_file' : 'OAE-process/OAE-ผลผลิตยางพารา.xlsx',\n",
-    "        'cost_file' : 'OAE-process/OAE-ต้นทุนรวมต่อไร่ยางพารา.xlsx',\n",
-    "        'price_file' : ['OAE-process/OAE-ราคาน้ำยางสดคละ.xlsx', 'OAE-process/OAE-ราคายางก้อน.xlsx', 'OAE-process/OAE-ราคายางแผ่นดิบชั้น3.xlsx'],\n",
-    "        'harvest' : rubber_harvest_season,\n",
-    "        'seasonality_prior_scale': 1,\n",
-    "        'fourier_order': 3,\n",
-    "        'prior_scale': 5\n",
-    "    }\n",
-    "}"
+    "print(list(params.keys()))"
    ]
   },
   {
@@ -156,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,23 +126,29 @@
     "yield_file = param['yield_file']\n",
     "cost_file = param['cost_file']\n",
     "price_file = param['price_file']\n",
+    "col_price = param['col_price']\n",
     "is_harvest_season = param['harvest']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "df, df_group = read_yield(yield_file)\n",
     "\n",
-    "df_cost = read_annually_data(cost_file)\n",
+    "df_cost = []\n",
+    "for cost_f in cost_file:\n",
+    "    df_cost.append(read_annually_data(cost_f))\n",
     "\n",
-    "precipitation_file = 'OAE-process/OAE-ปริมาณน้ำฝน-ฝนตก.xlsx'\n",
+    "precipitation_file = 'Clean13products/ปริมาณน้ำฝน - เขื่อน/ปริมาณฝนตก(RT2244)_clean.xlsx'\n",
     "df_precip = pd.read_excel(precipitation_file)\n",
+    "df_precip['date'] = df_precip['date'].apply(lambda x: datetime.datetime(x.year-543, x.month, x.day))\n",
     "\n",
-    "# df_price = read_month_data(price_file)"
+    "df_price = []\n",
+    "for price_f in price_file:\n",
+    "    df_price.append(read_month_data(price_f))"
    ]
   },
   {
@@ -208,18 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed74e2d5c6cb48b2a47f6a6187d63709",
+       "model_id": "6dcd5fa165e24caa9fa9ecc9f4b8291a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Province', options=('Suphan Buri', 'Phra Nakhon Si Ayutthaya', 'Ph…"
+       "interactive(children=(Dropdown(description='Province', options=('Suphan Buri', 'Phitsanulok', 'Nakhon Sawan', …"
       ]
      },
      "metadata": {},
@@ -234,31 +193,18 @@
     "    \n",
     "    df_precipitation = read_month_data_area(df_precip, Province)\n",
     "    \n",
+    "    col_regressor = [f'cost{i+1}' for i in range(len(df_cost))] + ['precipitation'] + col_price\n",
+    "    @add_regressor([*df_cost, df_precipitation, *df_price], col_regressor)\n",
+    "    def add_features(df):\n",
+    "        return df\n",
     "    \n",
-    "    if ptype == 'rubber':\n",
-    "        df_price1 = read_month_data(price_file[0])\n",
-    "        df_price2 = read_month_data(price_file[1])\n",
-    "        df_price3 = read_month_data(price_file[2])\n",
-    "\n",
-    "        col_regressor = ['cost', 'precipitation', 'price_latex', 'price_cup', 'price_sheet']\n",
-    "        @add_regressor([df_cost, df_precipitation, df_price1, df_price2, df_price3], col_regressor)\n",
-    "        def add_features(df):\n",
-    "            return df\n",
-    "    else:\n",
-    "        df_price = read_month_data(price_file)\n",
-    "\n",
-    "        col_regressor = ['cost', 'precipitation', 'price']\n",
-    "        @add_regressor([df_cost, df_precipitation, df_price], col_regressor)\n",
-    "        def add_features(df):\n",
-    "            return df\n",
-    "    \n",
-    "    df_train, df_test = df_yield[12:], df_yield[:12]\n",
-    "    df_train = add_features(df_train).dropna()\n",
+    "    df_train, df_test = df_yield[:-12], df_yield[-12:]\n",
+    "    df_train = add_features(df_train).fillna(0)\n",
     "    if is_harvest_season:\n",
     "        df_train = df_train.apply(is_harvest_season, axis=1)\n",
     "    \n",
     "    df_yield['year'] = pd.DatetimeIndex(df_yield['ds']).year\n",
-    "    print(df_yield.groupby('year').sum().head())\n",
+    "    print(df_yield.groupby('year').sum())\n",
     "    \n",
     "    model = Prophet(weekly_seasonality=False, daily_seasonality=False)\n",
     "    model.seasonality_prior_scale = param['seasonality_prior_scale']\n",
@@ -277,30 +223,35 @@
     "    model.fit(df_train)\n",
     "\n",
     "    future = model.make_future_dataframe(periods=24, freq=\"MS\")\n",
-    "    future = add_features(future)\n",
+    "    future = add_features(future).fillna(0)\n",
     "    \n",
     "    if is_harvest_season:\n",
     "        future = future.apply(is_harvest_season, axis=1)\n",
     "\n",
     "    forecast = model.predict(future)\n",
     "    forecast.yhat.clip(lower=0, inplace=True)\n",
-    "    forecast = forecast.sort_values(by='ds', ascending=False).reset_index().drop(columns=['index'])\n",
+    "#     forecast = forecast.sort_values(by='ds', ascending=False).reset_index().drop(columns=['index'])\n",
     "    \n",
     "    # Sanity check that we are evaluating the forecase at the same date\n",
-    "    assert(np.all(forecast[12:24]['ds'].to_numpy() == df_test['ds'].to_numpy()))\n",
+    "    assert(np.all(forecast[-24:-12]['ds'].to_numpy() == df_test['ds'].to_numpy()))\n",
+    "    residuals = forecast[-24:-12]['yhat'].to_numpy() - df_test['y'].to_numpy()\n",
+    "\n",
+    "    mae = np.mean(np.abs(residuals))\n",
+    "    rmse = np.sqrt(np.mean(residuals**2))\n",
+    "    total_error = abs(1 - (np.sum(forecast[-24:-12]['yhat'].to_numpy()) / (np.sum(df_test['y'].to_numpy())+eps))) * 100\n",
+    "\n",
     "    # Calculate root mean squared error.\n",
     "    print(f'\\nPredict Yield from {df_test[\"ds\"].min().strftime(\"%b %Y\")} to {df_test[\"ds\"].max().strftime(\"%b %Y\")}')\n",
-    "    print('RMSE: %.2f' % np.sqrt(np.mean((forecast[12:24]['yhat'].to_numpy() - df_test['y'].to_numpy())**2)) )\n",
-    "    print('MAE: %.2f' % np.mean(np.abs(forecast[12:24]['yhat'].to_numpy() - df_test['y'].to_numpy())) )\n",
-    "    \n",
-    "    total_error = abs(1 - (np.sum(forecast[12:24]['yhat'].to_numpy()) / np.sum(df_test['y'].to_numpy()))) * 100\n",
+    "    print('RMSE: %.2f' % rmse )\n",
+    "    print('MAE: %.2f' % mae )\n",
+    "\n",
     "    print(f\"Total Error: {total_error:.3f} %\")\n",
-    "    print(f\"Forecast: {np.sum(forecast[12:24]['yhat'].to_numpy()):.2f}\")\n",
+    "    print(f\"Forecast: {np.sum(forecast[-24:-12]['yhat'].to_numpy()):.2f}\")\n",
     "    print('Ground Truth:', np.sum(df_test['y'].to_numpy()))\n",
     "    \n",
     "    py.iplot([\n",
     "        go.Scatter(x=df_train['ds'], y=df_train['y'], name='train', line=dict(width=3)),\n",
-    "        go.Scatter(x=forecast['ds'], y=forecast['yhat'], name='yhat', line=dict(width=3)),\n",
+    "        go.Scatter(x=forecast['ds'], y=forecast['yhat'], name='yhat', line=dict(width=3, dash = 'dot')),\n",
     "#         go.Scatter(x=forecast['ds'], y=forecast['yhat_upper'], fill='tonexty', mode='none', name='upper'),\n",
     "#         go.Scatter(x=forecast['ds'], y=forecast['yhat_lower'], fill='tonexty', mode='none', name='lower'),\n",
     "        go.Scatter(x=forecast['ds'], y=forecast['trend'], name='Trend'),\n",
